--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+  <main>
+  <article>
+
 <img src="images/design-thinking-explained-logo.svg" alt="design thinking logo">
 
 <nav>
@@ -75,6 +78,10 @@
     <a href="hello@designthinkingexplained.com">hello@designthinkingexplained.com</a>
    </p>
     
+   </article>
+
+  </main>
+  
    <br>
 
    <footer>
